@@ -34,6 +34,8 @@ bugs were never in fully released code, but are noted here for the record.
   (d) Captures in negative assertions that were used as conditions were not
       happening if the assertion matched via (*ACCEPT).   
       
+  (e) Mark values were not being passed out of recursions. 
+      
 2. Now that pcre2_match() no longer uses recursive function calls (see above),
 the "match limit recursion" value seems misnamed. It still exists, and limits 
 the depth of tree that is searched. To avoid future confusion, it has been 
